--- a/web_static/102-index.html
+++ b/web_static/102-index.html
@@ -54,13 +54,16 @@
         <section class="places">
 	        <h1>Places</h1>
             <article>
-                <h2>My home</h2>
-                <div class="price_by_night">$80</div>
+                <div class="places_top">
+                    <h2>My home</h2>
+                    <div class="price_by_night">$80</div>
+                </div>
                 <div class="information">
                     <div class="max_guest">2 guests</div>
                     <div class="number_rooms">1 bedroom</div>
                     <div class="number_bathrooms">1 bathroom</div>
                 </div>
+                
                 <div class="user"><strong>Owner:</strong> John Doe</div>
                 <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod 
                     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
@@ -89,8 +92,10 @@
                 </div>
             </article>
             <article>
-                <h2>Tiny house</h2>
-                <div class="price_by_night">$50</div>
+                <div class="places_top">
+                    <h2>Tiny house</h2>
+                    <div class="price_by_night">$50</div>
+                </div>
                 <div class="information">
                     <div class="max_guest">4 guest</div>
                     <div class="number_rooms">3 bedroom</div>
@@ -123,8 +128,10 @@
                 </div>
             </article>
             <article>
-                <h2>A suite</h2>
-                <div class="price_by_night">$160</div>
+                <div class="places_top">
+                    <h2>A suite</h2>
+                    <div class="price_by_night">$160</div>
+                </div>
                 <div class="information">
                     <div class="max_guest">6 guests</div>
                     <div class="number_rooms">3 bedroom</div>
